# RayTracing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/core/: Camera.cpp  Camera.h  Ray.cpp  Ray.h  Vec3.cpp  Vec3.h
src/geometry/: HitRecord.h  Hittable.h  HittableList.cpp  HittableList.h  Sphere.cpp  Sphere.h
src/materials/: Emissive.cpp  Emissive.h  Lambertian.cpp  Lambertian.h  Material.h
src/render/: Image.cpp  Image.h  Renderer.cpp  Renderer.h
src/utils/: filter.cpp  random.cpp
tests/: CMakeLists.txt  test_Camera.cpp  test_Ray.cpp  test_Sphere.cpp  test_Vec3.cpp
